# rust_3ds_gpu_rendering_sample

./: Cargo.toml  build.rs
.cargo/: config.toml
.zed/: settings.json
assets/: sprite.v.pica
src/: main.rs
